fix collapse

--- a/src/Components/Events/index.css
+++ b/src/Components/Events/index.css
@@ -20,7 +20,7 @@
 .event-grid-container {
   display: grid;
   grid-gap: 10px 10px;
-  grid-template-columns: 80px calc(100% - 90px);
+  grid-template-columns: 80px min(327px, calc(100% - 90px));
   /* grid-template-columns: 80px 327px; */
   grid-auto-rows: 80px;
   justify-items: stretch;
